# krokfmt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
benches/: formatting_bench.rs  real_world_bench.rs
crates/krokfmt/: Cargo.toml
crates/krokfmt-playground/: Cargo.toml
crates/krokfmt-playground/src/: lib.rs
crates/krokfmt-web/: Cargo.toml  package-lock.json  package.json
crates/krokfmt-web/docs/: api.md  index.md  playground.md
crates/krokfmt-web/docs/.vitepress/: config.ts
crates/krokfmt-web/docs/.vitepress/components/: Playground.vue
crates/krokfmt-web/docs/.vitepress/theme/: index.ts  style.css
crates/krokfmt-web/docs/guide/: ci-integration.md  cli-usage.md  comment-preservation.md  configuration.md  editor-integration.md  getting-started.md  import-organization.md  member-ordering.md  rules.md  typescript-support.md  what-is-krokfmt.md
crates/krokfmt-web/docs/public/wasm/: krokfmt_playground.d.ts  krokfmt_playground.js  krokfmt_playground_bg.wasm.d.ts  package.json
crates/krokfmt-web/src/: main.rs
crates/krokfmt-web/static/css/: main.css
crates/krokfmt-web/static/js/: playground.js
crates/krokfmt-web/templates/: base.html  docs.html  index.html  playground.html
crates/krokfmt/docs/: comment-attachment.md  design.md
crates/krokfmt/src/: biome_formatter.rs  comment_extractor.rs  comment_formatter.rs  lib.rs
crates/krokfmt/test_files/: class_members.ts  enum_members.ts  jsx_props.tsx
crates/krokfmt/tests/: integration_tests.rs  snapshot_tests.rs
crates/krokfmt/tests/fixtures/fr1/: 1_1_import_aliases.input.ts  1_1_named_imports.input.ts  1_1_namespace_imports.input.ts  1_1_side_effect_imports.input.ts  1_2_categorization.input.ts  1_7_re_export_sorting.input.ts
crates/krokfmt/tests/fixtures/fr2/: 2_1_export_detection_edge_cases.input.ts  2_2_export_prioritization.input.ts  2_3_circular_reference.input.ts  2_3_class_dependencies.input.ts  2_3_complex_chains.input.ts  2_3_computed_properties.input.ts  2_3_dependency_preservation.input.ts  2_3_destructuring_dependencies.input.ts  2_3_forward_references.input.ts  2_3_namespace_dependencies.input.ts  2_4_visibility_alphabetization.input.ts  2_4_visibility_grouping.input.ts  2_4_visibility_mixed_declarations.input.ts  2_5_dependency_export_locality.input.ts
crates/krokfmt/tests/fixtures/fr3/: 3_1_function_arguments.input.ts  3_3_private_syntax.input.ts  3_3_typescript_private.input.ts  3_5_enum_members.input.ts  3_6_jsx_properties.input.ts
crates/krokfmt/tests/fixtures/fr6/: 6_1_line_comments.input.ts  6_2_export_comments.input.ts  6_3_class_member_comments.input.ts  6_4_comment_positioning.input.ts  6_4_object_property_comments.input.ts  6_5_comment_association.input.ts  6_6_special_comments.input.ts  6_7_inline_comments.input.ts
crates/krokfmt/tests/fixtures/fr7/: 7_1_module_separation.input.ts  7_3_class_member_separation.input.ts
crates/krokfmt/tests/snapshots/: snapshot_tests__fr1__1_1_default_imports.snap  snapshot_tests__fr1__1_1_import_aliases.snap  snapshot_tests__fr1__1_1_mixed_imports.snap  snapshot_tests__fr1__1_1_named_imports.snap  snapshot_tests__fr1__1_1_side_effect_imports.snap  snapshot_tests__fr1__1_3_sorting.snap  snapshot_tests__fr1__1_5_group_separation.snap  snapshot_tests__fr1__1_6_syntax_preservation.snap  snapshot_tests__fr1__1_7_re_export_organization.snap  snapshot_tests__fr1__1_7_re_export_sorting.snap  snapshot_tests__fr1__1_7_re_export_with_comments.snap  snapshot_tests__fr2__2_1_export_detection.snap  snapshot_tests__fr2__2_1_export_detection_edge_cases.snap  snapshot_tests__fr2__2_2_export_prioritization.snap  snapshot_tests__fr2__2_2_export_prioritization_complex.snap  snapshot_tests__fr2__2_3_class_dependencies.snap  snapshot_tests__fr2__2_3_complex_chains.snap  snapshot_tests__fr2__2_3_dependency_preservation.snap  snapshot_tests__fr2__2_3_forward_references.snap  snapshot_tests__fr2__2_3_hoisting_challenges.snap  snapshot_tests__fr2__2_3_interleaved_dependencies.snap  snapshot_tests__fr2__2_3_namespace_dependencies.snap  snapshot_tests__fr2__2_4_case_insensitive_visibility.snap  snapshot_tests__fr2__2_4_visibility_grouping.snap  snapshot_tests__fr2__2_4_visibility_with_dependencies.snap  snapshot_tests__fr2__2_comprehensive_integration.snap  snapshot_tests__fr3__3_3_mixed_visibility.snap  snapshot_tests__fr3__3_3_private_syntax.snap  snapshot_tests__fr3__3_4_type_members.snap  snapshot_tests__fr6__6_1_import_comments.snap  snapshot_tests__fr6__6_1_line_comments.snap  snapshot_tests__fr6__6_2_export_comments.snap  snapshot_tests__fr6__6_3_class_member_comments.snap  snapshot_tests__fr6__6_4_object_property_comments.snap  snapshot_tests__fr6__6_5_comment_association.snap  snapshot_tests__fr6__6_6_complex_comments.snap  snapshot_tests__fr6__6_6_special_comments.snap  snapshot_tests__fr6__6_7_standalone_comments.snap  snapshot_tests__fr7__7_1_module_separation.snap
deployment/: README.md
docs/: .gitignore  comment-attachment-problem.md  comment-attachment.md  design.md  requirements.md  swc-ast-and-comments-guide.md  swc-comment-example.ts  swc-comment-manipulation-example.rs  two-phase-comment-replacement-design.md  why-comment-reassociation-fails.md
src/: codegen.rs  comment_classifier.rs  comment_extractor.rs  comment_fixer.rs  comment_formatter.rs  comment_reinserter.rs  file_handler.rs  formatter.rs  lib.rs  main.rs  organizer.rs  parser.rs  selective_comment_handler.rs  selective_two_phase_formatter.rs  semantic_hash.rs  transformer.rs  two_phase_formatter.rs
test_files/: function_args.ts  sample.ts  (+2 more)
(+119 files in other folders)
