[workspace]
resolver = "2"
members = [
    "crates/krokfmt",
    "crates/krokfmt-playground",
]
exclude = ["crates/xtask"]

[workspace.package]
edition = "2021"
rust-version = "1.83.0"
authors = ["krokorok"]
license = "MIT"
repository = "https://github.com/skeswa/krokfmt"

[workspace.dependencies]
# Dependencies shared by 2+ crates
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = true