[package]
name = "krokfmt-playground"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WebAssembly playground for krokfmt"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
krokfmt = { path = "../krokfmt" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

