[package]
name = "krokfmt-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Web interface and documentation for krokfmt"
license.workspace = true
repository.workspace = true

[[bin]]
name = "krokfmt-web"
path = "src/main.rs"

[dependencies]
krokfmt = { path = "../krokfmt" }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-br", "compression-gzip"] }
tokio = { version = "1.43", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }